--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     compileSdkVersion 26
     defaultConfig {
         applicationId "com.example"
-        minSdkVersion 23
+        minSdkVersion 14
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -27,11 +27,8 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation "com.android.support:recyclerview-v7:26.1.0"
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-//    implementation project(':simpleadaper')
-    compile 'com.master.android:simpleadapter:3.0'
+    implementation project(':simpleadaper')
+//    compile 'com.master.android:simpleadapter:3.0'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     //For Databinding
